Fix background issue with next button

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
             
             <!-- Navigation -->
             <div class="navigation">
-                <button id="prevCard" class="nav-btn">‹ Previous</button>
-                <button id="nextCard" class="nav-btn">Next ›</button>
+                <button id="prevCard" class="nav-btn action-btn">‹ Previous</button>
+                <button id="nextCard" class="nav-btn action-btn">Next ›</button>
             </div>
         </div>
         
